cabal-version:      3.0
name:               metis
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror
    default-extensions:
        NoFieldSelectors
        DuplicateRecordFields
        NamedFieldPuns
        DuplicateRecordFields
        OverloadedStrings

library
    import:           warnings
    exposed-modules:  
        Metis.Core
        Metis.Codegen
        Metis.AllocateRegisters
        Metis.Isa
        Metis.Isa.X86_64
        Metis.Literal
        Metis.Anf
        Metis.Type
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.17.0.0, bound, sage, text >=2.0, deriving-compat, mtl, unordered-containers, hashable, lens, containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable metis
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.17.0.0,
        metis

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite metis-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
        Test.CoreToAsm
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.17.0.0,
        metis,
        hspec,
        bound,
        text,
        process,
        containers
