cabal-version:      3.0
name:               metis
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror
    default-extensions:
        NoFieldSelectors
        DuplicateRecordFields
        NamedFieldPuns
        DuplicateRecordFields
        OverloadedStrings

library
    import:           warnings
    exposed-modules:  
        Metis.Anf
        Metis.Asm
        Metis.Asm.Builder
        Metis.Asm.Class
        Metis.Codegen
        Metis.Compile
        Metis.Core
        Metis.InstSelection
        Metis.Isa
        Metis.Isa.X86_64
        Metis.IsaNew
        Metis.IsaNew.X86_64
        Metis.Kind
        Metis.Literal
        Metis.Liveness
        Metis.Log
        Metis.RegisterAllocation
        Metis.SSA.Var
        Metis.Type
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base >=4.17.0.0,
        bound,
        containers,
        deriving-compat,
        directory,
        dlist,
        filepath,
        foldable-buildable,
        hashable,
        indexed-traversable,
        lens,
        mtl >=2.3,
        process,
        sage,
        text >=2.0,
        transformers >=0.5.6,
        unordered-containers,
        witherable
    hs-source-dirs:   src
    default-language: Haskell2010

executable metis
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.17.0.0,
        metis

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite metis-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
        ErrorReporting
        Test.InstSelection
        Test.Anf
        Test.Compile
        Test.CoreToAsm
        Test.Liveness
        Test.RegisterAllocation
        Test.SimplifyAsm
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.17.0.0,
        bound,
        containers,
        directory,
        filepath,
        foldable-buildable,
        hashable,
        hspec,
        metis,
        mtl,
        process,
        temporary,
        text,
        unordered-containers,

        -- better test failure behaviours 
        call-stack,
        hspec-core,
        HUnit
