cabal-version:      3.0
name:               metis
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror
    default-extensions:
        NoFieldSelectors
        DuplicateRecordFields
        NamedFieldPuns
        DuplicateRecordFields
        OverloadedStrings

library
    import:           warnings
    exposed-modules:  
        Metis.InstSelection
        Metis.Anf
        Metis.Asm
        Metis.Asm.Builder
        Metis.Asm.Class
        Metis.Codegen
        Metis.Compile
        Metis.Core
        Metis.Isa
        Metis.Isa.X86_64
        Metis.Kind
        Metis.LLVM
        Metis.Literal
        Metis.Liveness
        Metis.Log
        Metis.Type
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base >=4.17.0.0,
        bound,
        containers,
        deriving-compat,
        directory,
        filepath,
        foldable-buildable,
        hashable,
        indexed-traversable,
        lens,
        -- `llvm-hs` is TOO HARD to compile. First I ran intro trouble compiling it with GHC9,
        -- then when I found a GHC version it could work with, I got C compile errors (despite
        -- seeming to have provided the correct LLVM C library versions).
        --
        -- So I'm working around this by using `llvm-hs-pure` and `llvm-hs-pretty` and calling out
        -- to `llc` to produce binaries.
        --
        -- Also, I'd like to use a newer version of LLVM but `llvm-hs[-pure|-pretty]` hasn't kept
        -- up. In particular, the opaque pointer changes in LLVM15 have caused a lot of breaking
        -- changes.
        --
        -- llvm-hs >= 9 && < 10,
        llvm-hs-pure >= 9 && < 10,
        mtl,
        process,
        sage,
        text >=2.0,
        transformers,
        unordered-containers,
        witherable
    hs-source-dirs:   src
    default-language: Haskell2010

executable metis
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.17.0.0,
        metis

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite metis-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
        ErrorReporting
        Test.InstSelection
        Test.Anf
        Test.Compile
        Test.CoreToAsm
        Test.LLVM
        Test.Liveness
        Test.SimplifyAsm
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.17.0.0,
        bound,
        containers,
        directory,
        filepath,
        foldable-buildable,
        hspec,
        llvm-hs-pure >= 9 && < 10,
        llvm-hs-pretty >= 0.9 && < 0.10,
        metis,
        mtl,
        process,
        temporary,
        text,
        unordered-containers,

        -- better test failure behaviours 
        call-stack,
        hspec-core,
        HUnit
